[project]
name = "jhub-cuda12-py3-11"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxwell Thorpe"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xnat (==0.4.3)",
    "pyxnat (>=1.4)",
    "pydicom (>=2.3.0)",
    "jupyterlab-git (>=0.41.0)",
    "numpy (<2.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterhub (==4.0.2)",
    "jupyter-server (>=2)",
    "jupyterlab (>=4)",
    "jupyter-server-proxy (>=4)",
    "mlflow (>=3.4.0,<4.0.0)",
    "torch (==2.2.1)",
    "torchvision (==0.17.1)",
    "torchaudio (==2.2.1)",
    "protobuf (==4.25.3)",
    "pyarrow (==15.0.2)",
    "notebook (==6.5.7)",
]

[tool.poetry]
packages = [{include = "jhub_cuda12_py3"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
